[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mseed-pipeline-converter"
version = "2.1.0"
description = "A robust pipeline for converting MiniSEED waveform data to CSS3.0 format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "MitroSoft Labs", email = "mitrosoftlabs@gmail.com"},
]
maintainers = [
    {name = "MitroSoft Labs", email = "mitrosoftlabs@gmail.com"},
]
keywords = ["seismology", "miniseed", "css3.0", "fdsn", "waveform", "seismic-data", "earthquake"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "obspy>=1.3.0",
    "numpy>=1.19.0",
    "sqlalchemy>=1.4.0",
    "pytz>=2021.1",
    "pisces>=0.3.0",
    "matplotlib>=3.3.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
plotting = [
    "matplotlib>=3.3.0",
    "cartopy>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/mitrosoftlabs/mseed_pipeline_converter"
Repository = "https://github.com/mitrosoftlabs/mseed_pipeline_converter.git"
Issues = "https://github.com/mitrosoftlabs/mseed_pipeline_converter/issues"
Documentation = "https://github.com/mitrosoftlabs/mseed_pipeline_converter/wiki"

[project.scripts]
mseed2css = "mseed_pipeline_converter:main"
mseed-converter = "mseed_pipeline_converter:main"

[tool.setuptools]
py-modules = ["mseed_pipeline_converter"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true